--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -835,7 +835,8 @@ hr{
   z-index: 1;
 }
 .plain-sect{
-  padding: 9rem 10rem 6rem;
+  padding: 0rem 10rem 6rem;
+  position: relative;
   &-header{
     display: flex;
     flex-direction: column;
@@ -936,7 +937,7 @@ hr{
         font-weight: 400;
         line-height: 170%;
       }
-      a{
+      .openModalBtn{
         color:#F03E3E;
         font-family: 'Roboto';
         font-size: 1.4rem;
@@ -983,6 +984,54 @@ hr{
   }
   .red-btn{
     width: 100%;
+  }
+  .btn-download{
+    color: #8FA4B2;
+    font-family: var(--Roboto);
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 170%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.2rem;
+    margin-top: 1.7rem;
+    svg{
+      width: 2.4rem;
+      height: 2.4rem;
+    }
+  }
+  .swiper {
+    width: 100%;
+    height: 55rem;
+  }
+  .slider-filter-btn{
+    background: black;
+    color: black;
+    z-index: 10000;
+    position: absolute;
+    top: 0;
+    right: 10rem;
+    display: flex;
+  }
+  .swiper-button-prev-filter{
+    transform: rotate(180deg);
+  }
+  .swiper-button-prev-filter, .swiper-button-next-filter{
+    width: 7.2rem;
+    height: 7.4rem;
+    background: rgba(0, 0, 0, 0.72);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .1s all linear;
+  }
+  .swiper-button-disabled{
+    background: grey;
+  }
+  .swiper-button-prev-filter:hover, .swiper-button-next-filter:hover{
+    background: var(--f-03-e-3-e, #F03E3E);
   }
 
 }
